Fix buttons alignment for pickers
Note this hardcodes the input-group append and prepend styling for beta, and priovides the styling.  Prepend and append are not actually supported for these fields at this time due to some custom data that is set in the data-g5-filepicker field. When trying to generalize the output (controlled by YAML), it was found we may need to set the data-g5-filepicker differenlty.

--- a/platforms/common/scss/admin/_input-groups.scss
+++ b/platforms/common/scss/admin/_input-groups.scss
@@ -1,4 +1,4 @@
-//Most of these controls are taken from http://getbootstrap.com/components/#input-groups
+//Most of these topography controls are taken from http://getbootstrap.com/components/#input-groups
 
 #g5-container {//wrapper
 
@@ -24,7 +24,7 @@
         border-left: 0 none;
     }
 
-    .input-group-addon {
+    .input-group-addon, .input-group-btn {
         white-space: nowrap;
         vertical-align: middle;
     }
@@ -40,16 +40,29 @@
         border-radius: 4px;
     }
 
+    .input-group-btn {
+        position: relative;
+        font-size: 0;
+        white-space: nowrap;
+
+        .button {
+            position: relative;
+            border: 1px solid $medium-gray;
+            border-radius: 4px;
+            margin: -1px;
+        }
+    }
+
     .input-group input:not(:first-child):not(:last-child), .input-group-addon:not(:first-child):not(:last-child), .input-group-btn:not(:first-child):not(:last-child) {
         border-radius: 0;
     }
 
-    .input-group input:last-child, .input-group-addon:last-child, .input-group-btn:first-child > .btn-group:not(:first-child) > .btn, .input-group-btn:first-child > .btn:not(:first-child), .input-group-btn:last-child > .btn, .input-group-btn:last-child > .btn-group > .btn, .input-group-btn:last-child > .dropdown-toggle {
+    .input-group input:last-child, .input-group-addon:last-child, .input-group-btn:first-child > .btn-group:not(:first-child) > .button, .input-group-btn:first-child > .btn:not(:first-child), .input-group-btn:last-child > .button, .input-group-btn:last-child > .btn-group > .button, .input-group-btn:last-child > .dropdown-toggle {
         border-top-left-radius: 0;
         border-bottom-left-radius: 0;
     }
 
-    .input-group input:first-child, .input-group-addon:first-child, .input-group-btn:first-child > .btn, .input-group-btn:first-child > .btn-group > .btn, .input-group-btn:first-child > .dropdown-toggle, .input-group-btn:last-child > .btn-group:not(:last-child) > .btn, .input-group-btn:last-child > .btn:not(:last-child):not(.dropdown-toggle) {
+    .input-group input:first-child, .input-group-addon:first-child, .input-group-btn:first-child > .button, .input-group-btn:first-child > .btn-group > .button, .input-group-btn:first-child > .dropdown-toggle, .input-group-btn:last-child > .btn-group:not(:last-child) > .button, .input-group-btn:last-child > .button:not(:last-child):not(.dropdown-toggle) {
         border-top-right-radius: 0;
         border-bottom-right-radius: 0;
     }
