--- a/platforms/common/scss/admin/_settings.scss
+++ b/platforms/common/scss/admin/_settings.scss
@@ -85,6 +85,7 @@
 
     i {
         vertical-align: middle;
+        line-height: inherit;
     }
 
     input, textarea {
